i18n/nl/docusaurus-plugin-content-docs/version-1.3.2/user/user-manual/my-tasks.md
---
title: Mijn Taken
sidebar_label: Mijn Taken
description: Een complete gids voor de Mijn Taken-module in de Time Management App. Leer hoe u uw toegewezen werk kunt filteren, achterstallige items kunt bijhouden en actieve taaktimers naadloos kunt beheren.
---

# Mijn Taken

De module **Mijn Taken** is een gepersonaliseerde werkruimte die taken weergeeft die specifiek zijn toegewezen aan de ingelogde gebruiker.

Deze sectie helpt gebruikers om:
* Zich te concentreren op hun toegewezen werk.
* Aankomende en achterstallige taken te monitoren.
* De dagelijkse en wekelijkse werkdruk bij te houden.
* Taaktimers snel te starten en te pauzeren.
* Prioriteiten efficiënt te beheren.

In tegenstelling tot de module **Alle Taken**, die taken voor alle gebruikers weergeeft, toont de module **Mijn Taken** alleen taken die relevant zijn voor de huidige gebruiker.

---

## Toegang tot de Mijn Taken-module
Om de sectie **Mijn Taken** te openen:
1. Klik op het **Kebab Menu** icoon in de linkerbovenhoek.
2. Selecteer **Mijn Taken** in de zijbalknavigatie.

---

## Overzicht van het Mijn Taken-scherm
Het scherm bevat de volgende secties:
1. Kopsectie
2. Taakcategorie Tabbladen
3. Paneel Mijn Taken Overzicht
4. Taakinformatiegebied
5. Snelle Actieknop (FAB)

---

### Kopsectie
* **Filter-icoon**: Wordt gebruikt om taken te filteren op basis van criteria zoals gesloten of voltooide taken.
* **Help-icoon**: Biedt snelle begeleiding of ondersteuningsinformatie.
* **Zoek-icoon**: Stelt gebruikers in staat om taken direct te zoeken.
* **Raster/Lijstweergave-icoon**: Schakel tussen verschillende taakweergave-indelingen.
* **Toevoegen-icoon**: Wordt gebruikt om een nieuwe taak aan te maken.

---

### Taakcategorie Tabbladen
Tabbladen voor snelle toegang om taken te organiseren op basis van tijdlijn en voltooiingsstatus.
* **Inbox**: Nieuw toegewezen of openstaande taken.
* **Vandaag**: Taken gepland voor de huidige dag.
* **Deze Week**: Taken gepland binnen de huidige week.
* **Deze Maand**: Taken gepland voor de huidige maand.
* **Later**: Taken gepland voor toekomstige datums.
* **Voltooid**: Voltooide taken.
* **Geannuleerd**: Geannuleerde of gesloten taken.
* **Alles**: Toont alle toegewezen taken.

---

### Paneel Mijn Taken Overzicht
Toont alle toegewezen taakkaarten in een gestructureerd lijstformaat. Elke kaart bevat: Taaknaam, Gerelateerde Projectnaam, Taakfase, Prioriteitsbeoordeling, Geplande Uren, Startdatum, Einddatum en Achterstallige Status.

* **Prioriteitsindicator**: Weergegeven met sterrenbeoordelingen.
* **Achterstallig-indicator**: Toont de achterstallige duur in het rood als de taak de geplande einddatum overschrijdt.

---

### Weergave Taakinformatie
Elk taakitem biedt planningsinformatie (Geplande Uren, Startdatum, Einddatum, Fasenaam) om gebruikers te helpen deadlines bij te houden en het bewustzijn van de planning te verbeteren.

---

## Taken Beheren vanuit Mijn Taken

**Een Nieuwe Taak Aanmaken:**
1. Klik op het **Toevoegen-icoon** of de Zwevende Actieknop (FAB).
2. Voer de vereiste taakinformatie in en klik op **Opslaan**.

**Bekijken en Bewerken:**
* Klik op een taakkaart om de gedetailleerde weergave te openen.
* Klik op het **Bewerken-icoon**, werk de velden bij en klik op **Opslaan**.

**Zoeken:**
* Klik op het **Zoek-icoon** en voer de taaknaam in om toegewezen werk snel te vinden.

---

## Beheer van Taaktimer
De module ondersteunt ingebouwde urenregistratie direct vanaf het overzichtsscherm.

* **Een Timer Starten**: Veeg het taakitem naar links en klik op het **Start-icoon**. De actieve werkduur begint met registreren, de herontworpen globale zwevende timer-widget verschijnt onderaan het scherm en er kan automatisch een urenstaat-invoer worden aangemaakt. Het starten van een timer zet een eventueel eerder actieve urenstaat automatisch op de status **Concept (Draft)** om overlappende actieve timers te voorkomen.
* **Een Timer Pauzeren**: Veeg het taakitem naar links en klik op het **Pauze-icoon**. Dit stopt de actieve registratie tijdelijk.

---

## Veegacties (Swipe Actions) in Mijn Taken
Snelle veegbewegingen verminderen het aantal navigatiestappen.

**Veeg naar Links Acties:**
* **Bekijken**: Opent volledige taakdetails.
* **Bewerken**: Opent het scherm voor het bewerken van de taak.
* **Start / Pauze**: Bestuurt de actieve taaktimer via de globale zwevende widget. Het starten van een timer zet een eventueel eerder actieve urenstaat op de status Concept.

**Veeg naar Rechts Acties:**
* **Opnieuw Plannen**: Wijzig snel geplande taakdatums (Morgen, Volgende Week, Volgende Maand of Aangepast).
* **Verwijderen**: Verwijder de taak uit het systeem.